[package]
name = "mev-relayer-protos"
version = "0.2.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
prost = "0.12.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
thiserror = "2.0.12"
futures-core = "0.3"
solana-sdk = "2"
serde = { version = "1", features = ["derive"] }
serde_with = "3.12.0"
bs58 = "0.5.1"
bincode = "1.3.3"
serde_json = "1.0.140"

[build-dependencies]
tonic-build = "=0.9.2"
